k8s/04-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels: {app: kafka}
  template:
    metadata:
      labels: {app: kafka}
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.0
          ports:
            - containerPort: 9092
            - containerPort: 29092
          readinessProbe:
            exec:
              command: ["kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 10
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
          resources:
            requests: {cpu: "200m", memory: "512Mi"}
            limits: {cpu: "1000m", memory: "1Gi"}
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: lms
spec:
  selector: {app: kafka}
  ports:
    - name: plaintext
      port: 29092
      targetPort: 29092
    - name: external
      port: 9092
      targetPort: 9092
  clusterIP: None
